--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,15 @@
 body {
   font-family: 'Red Hat Display', sans-serif;
   font-weight: 500;
+  background: url('../images/pattern-background-desktop.svg') no-repeat top left
+    var(--colors-pale-blue);
+  background-size: cover;
+}
+
+@media (max-width: 720px) {
+  body {
+    background-image: url('../images/pattern-background-mobile.svg');
+  }
 }
 
 h1,
@@ -24,7 +33,7 @@ button {
 }
 
 :root {
-  --colors-pale-blue: hsl(225, 100%, 100%, 94%);
+  --colors-pale-blue: hsl(225, 100%, 94%);
   --colors-very-pale-blue: hsl(225, 100%, 98%);
   --colors-bright-blue: hsl(245, 75%, 52%);
   --colors-dark-blue: hsl(223, 47%, 23%);
