feat: Add Summary Card

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,23 +2,12 @@
 *,
 ::after,
 ::before {
+  font-family: inherit;
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Red Hat Display', sans-serif;
-  font-weight: 500;
-  background: url('../images/pattern-background-desktop.svg') no-repeat top left
-    var(--colors-pale-blue);
-  background-size: cover;
-}
-
-@media (max-width: 720px) {
-  body {
-    background-image: url('../images/pattern-background-mobile.svg');
-  }
-}
-
+html,
+body,
 h1,
 h2,
 h3,
@@ -32,11 +21,162 @@ button {
   color: inherit;
 }
 
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-weight: 900;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Red Hat Display', sans-serif;
+  font-weight: 500;
+  background: url('../images/pattern-background-desktop.svg') no-repeat top left
+    var(--colors-pale-blue);
+  background-size: 100% auto;
+  min-height: 100vh;
+  padding: 1rem;
+}
+
+@media (max-width: 720px) {
+  body {
+    background-image: url('../images/pattern-background-mobile.svg');
+  }
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 :root {
   --colors-pale-blue: hsl(225, 100%, 94%);
   --colors-very-pale-blue: hsl(225, 100%, 98%);
   --colors-bright-blue: hsl(245, 75%, 52%);
   --colors-dark-blue: hsl(223, 47%, 23%);
   --colors-desaturated-blue: hsl(224, 23%, 55%);
+  --border-raduis: 1rem;
+  --box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
 }
 /* General Styles End */
+
+/* Summary Card Container */
+.summary-card {
+  width: min(28.125rem, 100%);
+  border-radius: var(--border-raduis);
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: var(--box-shadow);
+}
+
+.summary-card > main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 2.5rem 3rem;
+  color: var(--colors-desaturated-blue);
+}
+
+/* Summary Card Container End */
+
+/* Order Summary */
+.summary-card .order-summary {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+}
+
+.summary-card .order-summary > h1 {
+  font-size: 1.75rem;
+  font-weight: 900;
+  color: var(--colors-dark-blue);
+}
+
+.summary-card .order-summary p {
+  line-height: 1.65rem;
+}
+/* Order Summary End */
+
+/* Plan Selection */
+.plan-selection {
+  display: grid;
+  grid-template-columns: 3rem 1fr 0.1fr;
+  column-gap: 1rem;
+  align-items: center;
+  width: 100%;
+  padding: 1.75rem;
+  border-radius: var(--border-raduis);
+  background-color: var(--colors-very-pale-blue);
+}
+
+.plan-selection .pricing-details {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+.plan-selection .pricing-details span:first-of-type {
+  color: var(--colors-dark-blue);
+  font-weight: 900;
+}
+
+.plan-selection button {
+  background-color: transparent;
+  text-decoration: underline;
+  color: var(--colors-bright-blue);
+  transition: opacity 0.3s ease-in-out;
+}
+.plan-selection button:hover {
+  opacity: 0.75;
+}
+
+/* Plan Selection End */
+
+/* Buttons */
+
+.proceed-btn {
+  width: 100%;
+  padding: 0.875rem;
+  color: #fff;
+  background-color: var(--colors-bright-blue);
+  border-radius: 0.5rem;
+  margin: 1rem 0;
+  box-shadow: var(--box-shadow);
+  transition: opacity 0.3s ease-in-out;
+}
+.proceed-btn:hover {
+  opacity: 0.75;
+}
+
+.cancel-btn {
+  background-color: transparent;
+  transition: color 0.3s ease-in-out;
+}
+
+.cancel-btn:hover {
+  color: var(--colors-dark-blue);
+}
+
+/* Buttons End */
+
+@media (max-width: 420px) {
+  .summary-card > main {
+    padding: 2rem 1.75rem;
+  }
+  .plan-selection {
+    padding: 1.25rem;
+  }
+}
+@media (max-width: 370px) {
+  .summary-card > main {
+    padding: 1rem;
+  }
+  .plan-selection {
+    padding: 1rem;
+  }
+}
