--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ img {
   box-shadow: var(--box-shadow);
 }
 
-.summary-card > main {
+.summary-card > div {
   display: flex;
   flex-direction: column;
   align-items: center;
